Closed Bug 619559 Opened 13 years ago Closed 13 years ago

nsPermissionManager doesn't notify observers in content process

Categories

(Core :: Networking: Cookies, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jdm, Unassigned)

References

Details

Attachments

(1 file)

The block guarded by IsChildProcess() returns before initializing the observer service, which is undesirable.
Blocks: 621363
Attachment #499702 - Flags: review?(dwitte)
Comment on attachment 499702 [details] [diff] [review]
Acquire observer service in content process.

Oh dear. r=dwitte
Attachment #499702 - Flags: review?(dwitte) → review+
Comment on attachment 499702 [details] [diff] [review]
Acquire observer service in content process.

This is a low-risk fix for something that should be corrected.
Attachment #499702 - Flags: approval2.0?
Attachment #499702 - Flags: approval2.0? → approval2.0+
Whiteboard: [needs patch with commit message]
http://hg.mozilla.org/mozilla-central/rev/a4aadd1f8ce4
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Whiteboard: [needs patch with commit message]
I think this may have been intended here:

http://hg.mozilla.org/mozilla-central/rev/3249d9d62b58
You need to log in before you can comment on or make changes to this bug.