Bug 619559 - Make permission manager notify observers in content processes. r=dwitte a=jst